# advent-of-code

./: .gitignore  2024-01-1.py  2024-01-2.py  2024-02-1.py  2024-02-2.py  2024-03.py  2024-04-2.py  2024-04.py  2024-05.py  2024-06.py  2024-07.py  2024-08.py  2024-09.py  2024-10.py  2024-11-samples.yaml  2024-11.py  2024-12-samples.yaml  2024-12-samples2.yaml  2024-12.py  2024-13.py  2024-14.py  2024-15-sample-small.txt  2024-15.py  2024-16.py  2024-20.py  requirements.txt
2024-cpp/: CMakeLists.txt  README.md  aoc.cmake  start_new_day.fish
2024-cpp/01/: 2024-01.cpp
2024-cpp/2024-00/: CMakeLists.txt  solution.cpp
2024-cpp/2024-01/: solution.cpp
2024-cpp/_utils/: aoc_common.cpp  aoc_common.h
2024-python/: 2024-03.py  2024-04.py  2024-05.py  2024-06.py  2024-08.py  2024-09.py  2024-10-samples.yaml  2024-10.py  2024-12-samples2.yaml  2024-12.py  2024-13.py  2024-14.py  2024-15-challenge2-sample-small.txt  2024-15-challenge2-sample.txt  2024-15-sample.txt  2024-15c2.py
2024-zig/: .gitignore  README.md  build.zig  build.zig.zon
2024-zig/src/: aoc_utils.zig  day_01.zig  day_02.zig  day_03.zig  main.zig
